# guilib

./: .gitmodules  CMakeLists.txt
src/guilib/: camera.cpp  camera.h  common.cpp  common.h  materials.h  mesh.cpp  mesh.h  primitives.h  shader.cpp  shader.h  shader_program.cpp  shader_program.h  texture.cpp  texture.h  ui_element.cpp  ui_element.h  ui_shader.h  ui_slider.cpp  ui_slider.h  util.h
